# ror-legacy-svn-trunk

./: CMakeDependenciesConfig.txt  CMakeLists.txt  CMakeMacros.txt  build2test.py  build_linux.sh  pack.sh  readme.txt
source/: CMakeLists.txt  readme.txt
source/LayoutEditor/: PanelItems.h  PanelMainProperties.h  Parse.h  WidgetsWindow.h
source/LayoutEditor/Base/: StatisticInfo.h
source/angelscript_addons/contextmgr/: contextmgr.h
source/angelscript_addons/scriptany/: scriptany.h
source/angelscript_addons/scriptarray/: scriptarray.cpp
source/angelscript_addons/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
source/angelscript_addons/scriptdictionary/: scriptdictionary.h
source/angelscript_addons/scripthandle/: scripthandle.h
source/angelscript_addons/scripthelper/: scripthelper.cpp
source/angelscript_addons/scriptmath/: scriptmath.cpp
source/angelscript_addons/scriptstdstring/: scriptstdstring.cpp  scriptstdstring.h
source/angelscript_addons/scriptstring/: scriptstring.cpp  scriptstring_utils.cpp
source/angelscript_addons/serializer/: serializer.h
source/configurator/: CMakeLists.txt  Configurator.cpp  ImprovedConfigFile.h  config.xpm  configurator.cpp  icon.rc  joysticks.h  joywiz.xpm  ocl_bwtest.h  opencllogo.xpm  statpict.cpp  treelistctrl.h  wxValueChoice.h  wxutils.h
source/configurator/source/: configurator.cpp  joywizard.h  keyboardcfg.xpm  mousecfg.xpm
source/dependencies/: CMakeLists.txt
source/dependencies/Caelum-2006-11-09/: CMakeLists.txt  caelum.doxygen.usr
source/dependencies/OIS-HEAD/: CMakeLists.txt
source/dependencies/PagedGeometry/: CMakeLists.txt
source/dependencies/hydrax/: CMakeLists.txt
source/dependencies/lua-5.1.2/: CMakeLists.txt
source/dependencies/moFileReader/: CMakeLists.txt
source/dependencies/mygui/: CMakeLists.txt  version.txt
source/dependencies/openal-soft-1.8.466/: CMakeLists.txt
source/installer/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  SHA1.cpp  cevent.h  installerlog.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h  wizard.cpp  wizard.h  wsyncdownload.cpp  wsyncdownload.h  wthread.cpp  wthread.h  wxStrel.cpp  wxStrel.h
source/main/: .cproject  .project  Airfoil.cpp  Airfoil.h  Beam.cpp  Beam.h  BeamData.h  BeamFactory.cpp  BeamFactory.h  BeamForcesEuler.cpp  BeamLoadTruck.cpp  BeamSlideNode.cpp  BeamStats.cpp  BeamStats.h  CMakeLists.txt  CacheSystem.cpp  CacheSystem.h  Character.cpp  Character.h  ChatSystem.cpp  ChatSystem.h  CmdKeyInertia.cpp  CmdKeyInertia.h  ColoredTextAreaOverlayElement.cpp  Console.cpp  Console.h  DecalManager.h  DepthOfFieldEffect.h  DustManager.cpp  DustManager.h  DustPool.cpp  DustPool.h  DynamicLines.cpp  ExampleFrameListener.cpp  ExampleFrameListener.h  FlexAirfoil.cpp  FlexAirfoil.h  FlexBody.cpp  FlexBody.h  FlexMesh.h  (+112 more)
source/main/audio/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  SoundScriptManager.cpp  SoundScriptManager.h
source/main/dof/: DepthOfFieldEffect.cpp  DepthOfFieldEffect.h  Lens.cpp  Lens.h
source/main/framework/: AdvancedOgreFramework.cpp  AdvancedOgreFramework.h  AdvancedOgreFramework.hpp  AppState.h  AppState.hpp  AppStateManager.cpp  AppStateManager.h  BootstrapLoadingState.cpp  BootstrapLoadingState.h  ContentManager.cpp  ContentManager.h  GameState.cpp  GameState.h  LobbyState.cpp  LobbyState.h
source/main/gameplay/: AutoPilot.cpp  BeamEngine.cpp  BeamEngine.h  CacheSystem.cpp  CacheSystem.h  CacheSystemTable.h  Character.cpp  Character.h  CharacterFactory.cpp  CharacterFactory.h  ChatSystem.cpp  ChatSystem.h  DotSceneLoader.cpp  DotSceneLoader.h  GEnv.h  Landusemap.cpp  Landusemap.h  MaterialReplacer.cpp  MaterialReplacer.h  OutProtocol.cpp  OutProtocol.h  PlayerColours.cpp  PlayerColours.h  PositionStorage.cpp  PositionStorage.h  ProceduralManager.cpp  ProceduralManager.h  RandomTreeLoader.h  Replay.cpp  Replay.h  RigsOfRods.cpp  RigsOfRods.h  RoRFrameListener.cpp  RoRFrameListener.h  Road.cpp  Road.h  Road2.cpp  Savegame.cpp  Savegame.h  SceneMouse.cpp  (+23 more)
source/main/gfx/: AdvancedScreen.h  ColoredTextAreaOverlayElement.cpp  ColoredTextAreaOverlayElement.h  ColoredTextAreaOverlayElementFactory.h  DecalManager.cpp  DecalManager.h  DustManager.cpp  DustManager.h  DustPool.cpp  DustPool.h  DynamicLines.cpp  DynamicLines.h  DynamicRenderable.cpp  DynamicRenderable.h  EnvironmentMap.cpp  EnvironmentMap.h  GlowMaterialListener.h  Heathaze.cpp  Heathaze.h  HydraxWater.cpp  HydraxWater.h  IWater.h  MaterialFunctionMapper.cpp  MaterialFunctionMapper.h  MovableText.cpp  MovableText.h  PreviewRenderer.cpp  PreviewRenderer.h  ShadowManager.cpp  ShadowManager.h  Skidmark.cpp  Skidmark.h  SkyManager.cpp  SkyManager.h  VideoCamera.cpp  VideoCamera.h  Water.cpp  Water.h  WaterOld.cpp  WaterOld.h  (+15 more)
source/main/gui/: Console.cpp  Console.h  DashBoardManager.cpp  DashBoardManager.h  Dashboard.cpp  Dashboard.h  ExampleLoadingBar.h  GUIFriction.cpp  GUIFriction.h  GUIInputManager.cpp  GUIInputManager.h  GUIManager.cpp  GUIManager.h  GUIMenu.cpp  GUIMenu.h  GUIMp.cpp  HighScoreWindow.cpp  HighScoreWindow.h  IngameConsole.cpp  IngameConsole.h  LoadingWindow.cpp  LoadingWindow.h  LobbyGUI.cpp  LobbyGUI.h  MapControl.cpp  (+27 more)
source/scriptcompiler/: ScriptEngine.h
source/serializer/: serializationmodules.cpp  serializer.cpp  serializer.h
source/twodreplay/: main.cpp
source/updater/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Timer.h  VersionCompare.h  action.xpm  checkedlistctrl.h  extrapack.xpm  finished.xpm  icon.rc  platform.h  threadpool.cpp  threadpool.h  wizard.cpp  wizard.h  wsyncdownload.cpp  wsyncdownload.h  wthread.cpp  wthread.h  wxStrel.h
source/viewer/: CMakeLists.txt  RoRViewer.cpp  main.cpp  main.h  panel_meshprop.h  wxutils.h
trunk/: .svnignore  CMakeDependenciesConfig.txt  CMakeLists.txt  build2test.py  pack.sh  readme.txt
trunk/doc/: Doxyfile  Doxyfile.as.linux.conf  Doxyfile.installer.linux.conf  Doxyfile.source.linux.conf  changelog-old.txt  footer.html
trunk/source/: CMakeLists.txt
trunk/streams/: build_streams.py
trunk/tools/: createCMakeLists.py  getLayoutsStringsForTranslation.py
(+1810 files in other folders)
